--- a/src/app/exercise-page/exercise-page.component.html
+++ b/src/app/exercise-page/exercise-page.component.html
@@ -2,24 +2,47 @@
   <div style="width:25%">
     <app-list
       title="Catégorie"
-      [items]= categoriesList
-      (toggleItem)="onItemToggle($event, categoriesList)">
+      [items]= "categoriesList"
+      (toggleItem)="onItemToggle($event,categoriesList)">
     </app-list> 
 
     <br><br>
     <app-list
     title="Equipement"
-      [items]=equipmentsList
+      [items]="equipmentsList"
       (toggleItem)="onItemToggle($event, equipmentsList)"
     ></app-list>
     <br><br>
     <app-list
     title="Muscles"
-      [items]=musclesList
+      [items]="musclesList"
       (toggleItem)="onItemToggle($event,musclesList)"
     ></app-list>
 </div>
 <div>
+  <div class="pagination flex items-center justify-center space-x-4 p-4 bg-gray-100 rounded-lg shadow-md">
+    <button
+      class="px-4 py-2 text-sm font-medium text-white bg-blue-500 rounded-lg shadow-md hover:bg-blue-600 disabled:bg-gray-300 disabled:cursor-not-allowed disabled:text-gray-500 transition"
+      (click)="changePage(currentPage - 1)"
+      [disabled]="currentPage === 1"
+    >
+      <
+    </button>
+    <span class="text-sm font-medium text-gray-700">
+      Page <span class="font-bold text-blue-500">{{ currentPage }}</span> of
+      <span class="font-bold text-blue-500">{{ totalPages }}</span>
+    </span>
+    <button
+      class="px-4 py-2 text-sm font-medium text-white bg-blue-500 rounded-lg shadow-md hover:bg-blue-600 disabled:bg-gray-300 disabled:cursor-not-allowed disabled:text-gray-500 transition"
+      (click)="changePage(currentPage + 1)"
+      [disabled]="currentPage === totalPages"
+    >
+      >
+    </button>
+  </div>
+ 
+  <app-search-bar></app-search-bar>  
+  
   <app-exercise-grid [exercises]="exercisesList"></app-exercise-grid>
 </div>
 
