--- a/src/app/exercise-page/exercise-grid/exercise-grid.component.html
+++ b/src/app/exercise-page/exercise-grid/exercise-grid.component.html
@@ -1,5 +1,9 @@
+@if (loading()){
+<app-loading></app-loading>
+}
+@else{
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
     @for (exercise of exercises; track exercise.name){
     <app-exercise-card [exercise]="exercise"></app-exercise-card>}
   </div>
-  
+}
