--- a/src/app/exercise-page/exercise-page.component.html
+++ b/src/app/exercise-page/exercise-page.component.html
@@ -1,3 +1,6 @@
+@if (isLoading()){
+  <app-loading></app-loading> }
+@else{
 <div style="display:flex">
   <div style="width:25%">
     <app-list
@@ -43,7 +46,8 @@
  
   <app-search-bar></app-search-bar>  
   
-  <app-exercise-grid [exercises]="exercisesList"></app-exercise-grid>
+  <app-exercise-grid [loading]="exercisesAreLoading" [exercises]="exercisesList"></app-exercise-grid>
 </div>
 
 </div>
+}
