--- a/src/app/routine-form/routine-form.component.html
+++ b/src/app/routine-form/routine-form.component.html
@@ -1,140 +1,179 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="routineForm" class="max-w-2xl mx-auto p-6 bg-white shadow-md rounded-lg">
-    <div class="space-y-6" formArrayName="exercises">
-        <h2 class="text-2xl font-bold text-gray-800 mb-4">Workout Routine</h2>
-
-        @for (exercise of exercises.controls; track exerciseIndex; let exerciseIndex = $index) {
-            <div [formGroupName]="exerciseIndex" class="border-2 border-gray-200 rounded-lg p-6 space-y-4 relative">
-                <button
-                        type="button"
-                        class="absolute top-2 right-2 text-red-500 hover:text-red-700 focus:outline-none"
+<form (ngSubmit)="onSubmit()" [formGroup]="routineForm" class="max-w-4xl mx-auto p-8 bg-white shadow-2xl rounded-xl">
+    <div class="space-y-6">
+        <div class="grid md:grid-cols-2 gap-6">
+            <div>
+                <label class="block text-sm font-semibold text-gray-700 mb-2">
+                    Routine Name
+                </label>
+                <input
+                        class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent"
+                        formControlName="name"
+                        placeholder="Enter routine name"
+                        type="text"
                 >
-                    <i class="fa-solid fa-trash" (click)="deleteExercise(exerciseIndex)"></i>
-                </button>
-                <div class="grid md:grid-cols-2 gap-4">
-                    <div>
-                        <label for="exerciseName-{{exerciseIndex}}"
-                               class="block text-sm font-semibold text-gray-700 mb-1">
-                            Exercise Name
-                        </label>
+            </div>
+        </div>
+
+        <div>
+            <label class="block text-sm font-semibold text-gray-700 mb-2">
+                Routine Description
+            </label>
+            <textarea
+                    class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent"
+                    formControlName="description"
+                    placeholder="Enter routine description"
+                    rows="3"
+            ></textarea>
+        </div>
+        <div>
+            <label class="block text-sm font-semibold text-gray-700 mb-2">
+                Scheduled Days
+            </label>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-2" formArrayName="scheduledDays">
+                @for (day of ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']; track $index) {
+                    <label class="inline-flex items-center">
                         <input
-                                id="exerciseName-{{exerciseIndex}}"
-                                type="text"
-                                formControlName="exerciseName"
-                                placeholder="Enter exercise name"
-                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                                type="checkbox"
+                                [value]="day"
+                                (change)="updateScheduledDays($event, day)"
+                                class="form-checkbox h-5 w-5 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500"
                         >
-                    </div>
+                        <span class="ml-2 text-sm text-gray-700">{{ day.substring(0, 3) }}</span>
+                    </label>
+                }
+            </div>
+        </div>
 
-                    <div>
-                        <label for="restBetweenSets-{{exerciseIndex}}"
-                               class="block text-sm font-semibold text-gray-700 mb-1">
-                            Rest Between Sets
-                        </label>
-                        <input
-                                id="restBetweenSets-{{exerciseIndex}}"
-                                type="number"
-                                formControlName="restBetweenSets"
-                                placeholder="Rest time in seconds"
-                                min="0"
-                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                        >
-                    </div>
-                </div>
+        <div class="space-y-8" formArrayName="exercises">
+            <h2 class="text-3xl font-extrabold text-gray-900  mb-6">Exercises</h2>
 
-                <div formArrayName="sets" class="space-y-4">
-                    <h3 class="text-lg font-semibold text-gray-800 mb-2">Sets</h3>
-                    @for (set of exercises.controls.at(exerciseIndex)?.controls?.sets?.controls; track setIndex; let setIndex = $index) {
-                        <div [formGroupName]="setIndex" class="bg-gray-50 p-4 rounded-lg">
-                            <div class="grid md:grid-cols-5 gap-3 items-end">
-                                <div>
-                                    <label for="reps-{{exerciseIndex}}-{{setIndex}}"
-                                           class="text-xs text-gray-600">Reps</label>
-                                    <input
-                                            id="reps-{{exerciseIndex}}-{{setIndex}}"
-                                            type="number"
-                                            formControlName="reps"
-                                            placeholder="Reps"
-                                            min="0"
-                                            class="w-full px-2 py-1 border border-gray-300 rounded-md focus:outline-none focus:ring-1 focus:ring-blue-500"
-                                    >
-                                </div>
-                                <div>
-                                    <label for="weight-{{exerciseIndex}}-{{setIndex}}" class="text-xs text-gray-600">Weight</label>
-                                    <input
-                                            id="weight-{{exerciseIndex}}-{{setIndex}}"
-                                            type="number"
-                                            formControlName="weight"
-                                            placeholder="Weight"
-                                            min="0"
-                                            step="0.1"
-                                            class="w-full px-2 py-1 border border-gray-300 rounded-md focus:outline-none focus:ring-1 focus:ring-blue-500"
-                                    >
-                                </div>
-                                <div>
-                                    <label for="weightUnit-{{exerciseIndex}}-{{setIndex}}"
-                                           class="text-xs text-gray-600">Unit</label>
-                                    <select
-                                            id="weightUnit-{{exerciseIndex}}-{{setIndex}}"
-                                            formControlName="weightUnit"
-                                            class="w-full px-2 py-1 border border-gray-300 rounded-md focus:outline-none focus:ring-1 focus:ring-blue-500"
-                                    >
-                                        <option value="kg">kg</option>
-                                        <option value="lbs">lbs</option>
-                                    </select>
-                                </div>
-                                <div>
-                                    <label for="rer-{{exerciseIndex}}-{{setIndex}}"
-                                           class="text-xs text-gray-600">RER</label>
-                                    <input
-                                            id="rer-{{exerciseIndex}}-{{setIndex}}"
-                                            type="number"
-                                            formControlName="rer"
-                                            placeholder="RER"
-                                            step="0.1"
-                                            class="w-full px-2 py-1 border border-gray-300 rounded-md focus:outline-none focus:ring-1 focus:ring-blue-500"
-                                    >
-                                </div>
-                                <button
-                                        type="button"
-                                        (click)="deleteSet(exerciseIndex, setIndex)"
-                                        class="px-3 py-1 bg-red-500 text-white rounded hover:bg-red-600 transition-colors disabled:opacity-50"
-                                >
-                                    Delete
-                                </button>
-                            </div>
-                            <div class="flex justify-end space-x-2 mt-3">
-
-                            </div>
-                        </div>
-                    }
+            @for (exercise of exercises.controls; track exerciseIndex; let exerciseIndex = $index) {
+                <div
+                        [formGroupName]="exerciseIndex"
+                        class="border-2 border-gray-200 rounded-xl p-6 space-y-5 relative bg-gray-50 hover:shadow-md transition-shadow group"
+                >
                     <button
                             type="button"
-                            (click)="addSet(exerciseIndex)"
-                            class="w-full py-2 bg-green-500 text-white rounded-md hover:bg-green-600 transition-colors flex items-center justify-center space-x-2"
+                            class="absolute top-3 right-3 text-red-500 hover:text-red-700 opacity-0 group-hover:opacity-100 transition-opacity"
+                            (click)="deleteExercise(exerciseIndex)"
                     >
-                        <i class="fa-solid fa-plus"></i>
-                        <span>Add Set</span>
+                        <i class="fa-solid fa-trash"></i>
                     </button>
+
+                    <div class="grid md:grid-cols-2 gap-6">
+                        <div>
+                            <label class="block text-sm font-semibold text-gray-700 mb-2">
+                                Exercise Name
+                            </label>
+                            <input
+                                    type="text"
+                                    formControlName="exerciseName"
+                                    placeholder="Enter exercise name"
+                                    class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent"
+                            >
+                        </div>
+
+                        <div>
+                            <label class="block text-sm font-semibold text-gray-700 mb-2">
+                                Rest Between Sets (in seconds)
+                            </label>
+                            <input
+                                    type="number"
+                                    formControlName="restBetweenSets"
+                                    placeholder="Rest time in seconds"
+                                    min="0"
+                                    class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent"
+                            >
+                        </div>
+                    </div>
+
+                    <div formArrayName="sets" class="space-y-5">
+                        <h3 class="text-xl font-semibold text-gray-800 border-b pb-2">Sets</h3>
+
+                        @for (set of exercises.controls.at(exerciseIndex)?.controls?.sets?.controls; track setIndex; let setIndex = $index) {
+                            <div [formGroupName]="setIndex"
+                                 class="bg-white border border-gray-200 p-5 rounded-lg shadow-sm">
+                                <div class="grid md:grid-cols-5 gap-4 items-end">
+                                    <div>
+                                        <label class="text-xs text-gray-600 mb-1 block">Reps</label>
+                                        <input
+                                                type="number"
+                                                formControlName="reps"
+                                                placeholder="Reps"
+                                                min="0"
+                                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-1 focus:ring-indigo-500"
+                                        >
+                                    </div>
+                                    <div>
+                                        <label class="text-xs text-gray-600 mb-1 block">Weight</label>
+                                        <input
+                                                type="number"
+                                                formControlName="weight"
+                                                placeholder="Weight"
+                                                min="0"
+                                                step="0.1"
+                                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-1 focus:ring-indigo-500"
+                                        >
+                                    </div>
+                                    <div>
+                                        <label class="text-xs text-gray-600 mb-1 block">Unit</label>
+                                        <select
+                                                formControlName="weightUnit"
+                                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-1 focus:ring-indigo-500"
+                                        >
+                                            <option value="kg">kg</option>
+                                            <option value="lbs">lbs</option>
+                                        </select>
+                                    </div>
+                                    <div>
+                                        <label class="text-xs text-gray-600 mb-1 block">RER</label>
+                                        <input
+                                                type="number"
+                                                formControlName="rer"
+                                                placeholder="RER"
+                                                step="0.1"
+                                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-1 focus:ring-indigo-500"
+                                        >
+                                    </div>
+                                    <button
+                                            type="button"
+                                            (click)="deleteSet(exerciseIndex, setIndex)"
+                                            class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600 transition-colors"
+                                    >
+                                        Delete
+                                    </button>
+                                </div>
+                            </div>
+                        }
+
+                        <button
+                                type="button"
+                                (click)="addSet(exerciseIndex)"
+                                class="mx-auto w-1/3 py-3 bg-red-500 text-white rounded-lg hover:bg-red-600 transition-colors flex items-center justify-center space-x-3"
+                        >
+                            <i class="fa-solid fa-plus"></i>
+                            <span>Add Set</span>
+                        </button>
+                    </div>
                 </div>
-            </div>
-        }
+            }
+            <button
+                    (click)="addExercise()"
+                    class="w-full py-3 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 transition-colors flex items-center justify-center space-x-2"
+                    type="button"
+            >
+                <i class="fa-solid fa-plus"></i>
+                <span>Add Exercise</span>
+            </button>
+        </div>
 
-        <button
-                (click)="addExercise()"
-                class="w-full py-3 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 transition-colors flex items-center justify-center space-x-2"
-                type="button"
-        >
-            <i class="fa-solid fa-plus"></i>
-            <span>Add Exercise</span>
-        </button>
-    </div>
-
-    <div class="mt-6">
-        <button
-                class="w-full py-3 bg-emerald-600 text-white rounded-md hover:bg-emerald-700 transition-colors font-semibold"
-                type="submit"
-        >
-            Save Workout Routine
-        </button>
+        <div class="mt-8">
+            <button
+                    class="w-full py-4 bg-emerald-600 text-white rounded-lg hover:bg-emerald-700 transition-colors font-bold text-lg shadow-md"
+                    type="submit"
+            >
+                Save Workout Routine
+            </button>
+        </div>
     </div>
 </form>
