--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import 'ngx-toastr/toastr';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
