--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<section class="bg-background-dark">
+<div class="bg-background-dark">
   <div class="flex flex-col items-center justify-center ">
     <a href="#" class="flex  mt-5 items-center mb-6 text-2xl font-semibold text-text-light">
       <img class="w-8 h-8 mr-2" src="assets/logo.png" alt="logo">
@@ -52,9 +52,16 @@
           </button>
         </form>
       </div>
+      @if(errorMessage){
+        <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4" role="alert">
+          <p>          {{ errorMessage }}
+          </p>
+        </div>
+
+      }
     </div>
     <p class="text-sm font-light text-secondary-dark dark:text-text-light mb-5">
       {{ LOGIN_PAGE_TEXTS.CREATE_ACCOUNT_PROMPT }} <a href="#" class="font-medium text-primary DEFAULT hover:underline dark:text-primary-focus">{{ LOGIN_PAGE_TEXTS.SIGN_UP_TITLE }}</a>
     </p>
   </div>
-</section>
+</div>
