fixed loading/search problems

--- a/src/app/exercise-page/exercise-page.component.html
+++ b/src/app/exercise-page/exercise-page.component.html
@@ -1,5 +1,5 @@
 @if (isLoading())
-{
+{ llllll
   <app-loading></app-loading>
 }
 @else
@@ -30,6 +30,9 @@
     </div>
 
     <div style="width: 75%; position: relative">
+      
+
+      
       <div
         class="pagination flex items-center justify-center space-x-4 p-4 bg-gray-100 rounded-lg shadow-md"
       >
@@ -53,7 +56,6 @@
           >
         </button>
       </div>
-
       <div class="relative">
         <app-search-bar ></app-search-bar>
       </div>
