* feature: add  nutritionLog component * refactor: rename nutrition-details to nutrition-goals * feature: add nutritionPlanProgress component * refactor: add nutritionDetails component and include goals (nutrition-goal.component.ts), progress(nutrition-plan-progress.component.ts) and popup modal for logs(nutrition-log.component.ts)

--- a/src/app/nutrition/nutrition-list/nutrition-list.component.html
+++ b/src/app/nutrition/nutrition-list/nutrition-list.component.html
@@ -5,7 +5,9 @@
   @else {
     @for(nutritionPlan of nutritionPlans ;track nutritionPlan?.id){
       <li>
-        <app-nutrition-item [nutritionPlan]="nutritionPlan"></app-nutrition-item>
+        <a [routerLink]="[nutritionPlan?.id]">
+          <app-nutrition-item [nutritionPlan]="nutritionPlan"></app-nutrition-item>
+        </a>
       </li>
     }
   }
