--- a/src/app/nutrition/nutrition-details/nutrition-details.component.html
+++ b/src/app/nutrition/nutrition-details/nutrition-details.component.html
@@ -1,58 +1,12 @@
-<div class="flex flex-col items-center">
-  @if (isLoading()) {
-    <div class="">
-      <app-loading-spinner></app-loading-spinner>
-    </div>
-  }
-  @if (!(isLoading()) && (nutritionPlanDetails$|async); as details) {
-      <div class="flex flex-col items-center max-w-md text-center">
-        <div>
-          <header>{{ details.description }}</header>
-          <hr>
-        </div>
-        <div class="w-full max-w-md mt-2 mx-auto  border rounded-lg shadow-md overflow-hidden">
-          <table class="min-w-full table-auto text-left border-collapse">
-            <thead class="bg-gray-100">
-            <tr>
-              <th class="px-4 py-2 text-sm font-semibold text-gray-700">Macronutriments</th>
-              <th class="px-4 py-2 text-sm font-semibold text-gray-700"></th>
-            </tr>
-            </thead>
-            <tbody class="bg-white divide-y divide-gray-200">
-            <tr>
-              <td class="px-4 py-2 text-sm text-gray-600">Energy</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.goal_energy!|falsyValues:'kcal' }}
-                /{{ details.goal_energy! * 4.184 |falsyValues:'kJ' }}
-              </td>
-            </tr>
-            <tr>
-              <td class="px-4 py-2 text-sm text-gray-600">Protein</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.goal_protein | falsyValues:' g' }}</td>
-            </tr>
-            <tr>
-              <td class="px-4 py-2 text-sm text-gray-600">Carbohydrates</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.goal_carbohydrates|falsyValues:'g' }}</td>
-            </tr>
-            <tr>
-              <td class="px-4 py-2 text-sm text-gray-600">Fat</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.goal_fat }} g</td>
-            </tr>
-            </tbody>
-
-            <thead class="bg-gray-100">
-            <tr>
-              <th class="px-4 py-2 text-sm font-semibold text-gray-700">Other</th>
-              <th class="px-4 py-2 text-sm font-semibold text-gray-700"></th>
-            </tr>
-            <tbody class="bg-white divide-y divide-gray-200">
-            <tr>
-              <td class="px-4 py-2 text-sm text-gray-600">Fiber</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.goal_fiber| falsyValues:'g' }}</td>
-            </tr>
-            </tbody>
-
-          </table>
-        </div>
-      </div>
-  }
+<div class="flex flex-row pt-16">
+  <div class="flex flex-col items-center w-1/2">
+    <h2>Achieved</h2>
+    <app-nutrition-plan-progress></app-nutrition-plan-progress>
+  </div>
+  <div class="flex flex-col items-center w-1/2">
+    <h2>Goals</h2>
+    <app-nutrition-goal></app-nutrition-goal>
+  </div>
 </div>
+
+<button (click)="openModal()" class="absolute bottom-0 right-10 rounded-full bg-red-600 text-white text-6xl h-16 w-16 hover:bg-red-800">+</button>
