--- a/src/app/nutrition/nutrition-goal/nutrition-goal.component.html
+++ b/src/app/nutrition/nutrition-goal/nutrition-goal.component.html
@@ -4,15 +4,8 @@
       <app-loading-spinner></app-loading-spinner>
     </div>
   }
-  @if (!(isLoading()) && (ingredientDetails$|async); as details) {
-    @if (details.errorMessage) {
-      <div class="text-center text-neutral-600">{{ details.errorMessage }}</div>
-    } @else {
+  @if (!(isLoading()) && (nutritionPlanDetails$|async); as details) {
       <div class="flex flex-col items-center max-w-md text-center">
-        <div>
-          <header>{{ details.name }}</header>
-          <hr>
-        </div>
         <div class="w-full max-w-md mt-2 mx-auto  border rounded-lg shadow-md overflow-hidden">
           <table class="min-w-full table-auto text-left border-collapse">
             <thead class="bg-gray-100">
@@ -24,29 +17,21 @@
             <tbody class="bg-white divide-y divide-gray-200">
             <tr>
               <td class="px-4 py-2 text-sm text-gray-600">Energy</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.energy!|falsyValues:'kcal' }}
-                /{{ details.energy! * 4.184 |falsyValues:'kJ' }}
+              <td class="px-4 py-2 text-sm text-gray-800">{{ details.goal_energy!|falsyValues:'kcal' }}
+                /{{ details.goal_energy! * 4.184 |falsyValues:'kJ' }}
               </td>
             </tr>
             <tr>
               <td class="px-4 py-2 text-sm text-gray-600">Protein</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.protein | falsyValues:' g' }}</td>
+              <td class="px-4 py-2 text-sm text-gray-800">{{ details.goal_protein | falsyValues:' g' }}</td>
             </tr>
             <tr>
               <td class="px-4 py-2 text-sm text-gray-600">Carbohydrates</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.carbohydrates|falsyValues:'g' }}</td>
-            </tr>
-            <tr>
-              <td class="px-4 py-2 text-sm text-gray-600">Sugar in carbohydrates</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.carbohydrates_sugar|falsyValues:'g' }}</td>
+              <td class="px-4 py-2 text-sm text-gray-800">{{ details.goal_carbohydrates|falsyValues:'g' }}</td>
             </tr>
             <tr>
               <td class="px-4 py-2 text-sm text-gray-600">Fat</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.fat|falsyValues:'g' }} g</td>
-            </tr>
-            <tr>
-              <td class="px-4 py-2 text-sm text-gray-600">Saturated fatty acid content in fatty acids</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.fat_saturated| falsyValues:'g' }}</td>
+              <td class="px-4 py-2 text-sm text-gray-800">{{ details.goal_fat|falsyValues:'g' }} g</td>
             </tr>
             </tbody>
 
@@ -58,24 +43,12 @@
             <tbody class="bg-white divide-y divide-gray-200">
             <tr>
               <td class="px-4 py-2 text-sm text-gray-600">Fiber</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.fiber| falsyValues:'g' }}</td>
-            </tr>
-            <tr>
-              <td class="px-4 py-2 text-sm text-gray-600">Sodium</td>
-              <td class="px-4 py-2 text-sm text-gray-800">{{ details.sodium| falsyValues:'g' }}</td>
+              <td class="px-4 py-2 text-sm text-gray-800">{{ details.goal_fiber| falsyValues:'g' }}</td>
             </tr>
             </tbody>
 
           </table>
         </div>
       </div>
-    }
   }
 </div>
-
-
-
-
-
-
-
