fix: fixed css on login and preferences I have no idea what black magic this is

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="bg-background-dark">
+<div class="bg-background-dark h-full">
   <div class="flex flex-col items-center justify-center ">
     <a href="#" class="flex  mt-5 items-center mb-6 text-2xl font-semibold text-text-light">
       <img class="w-8 h-8 mr-2" src="assets/logo.png" alt="logo">
