--- a/src/app/user-settings/user-settings.component.html
+++ b/src/app/user-settings/user-settings.component.html
@@ -1,4 +1,4 @@
-<body class="mx-auto p-8 bg-background-dark">
+<body class="mx-auto p-8 bg-background-dark h-full">
 <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
   <div class="space-y-12">
     <div class="pb-12">
