--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
-<app-navbar></app-navbar>
 
+<app-navbar></app-navbar>
 @if (isLoading) {
   @defer (on timer(200ms)) {
     <app-loader-page></app-loader-page>
   }
 } @else {
-  <div [ngClass]="{'container mx-auto': includeContainer}">
+  <div id="main-container"
+       class="flex-1"
+    [ngClass]="{'container mx-auto': includeContainer}">
     <router-outlet></router-outlet>
   </div>
 }
