--- a/src/app/exercise-page/exercise-card/exercise-card.component.html
+++ b/src/app/exercise-page/exercise-card/exercise-card.component.html
@@ -2,7 +2,7 @@
     <div class="card">
       <!-- Front Side -->
       <div class="card-side card-front p-6 bg-white shadow-lg rounded-lg relative">
-        <span class="absolute top-4 left-4 px-4 py-2 text-sm font-medium text-white bg-blue-500 rounded-lg">
+        <span class="absolute top-4 left-4 px-4 py-2 text-sm font-medium text-white bg-red-500 rounded-lg">
           {{ exercise.category }}
         </span>
         <img 
